--- a/mvp/templates/mvp/home.html
+++ b/mvp/templates/mvp/home.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ template_title }}</title>
-</head>
-<body>
+{% extends 'mvp/base.html' %}
+
+{% block content %}
 <h1>
     Hello people! Working on a mvp app
 </h1>
@@ -21,6 +17,5 @@
     </form>{% else %}
         <div><h2>{{ comment }}</h2></div>
     {% endif %}
-</div>
-</body>
-</html>
+
+{% endblock %}
